--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <gson.version>2.8.8</gson.version>
+    <gson.version>2.8.9</gson.version>
     <graal-sdk.version>21.3.0</graal-sdk.version>
     <junit.jupiter.version>5.8.1</junit.jupiter.version>
     <assertj.version>3.21.0</assertj.version>
@@ -87,8 +87,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
 
