--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <gson.version>2.10</gson.version>
-    <graal-sdk.version>22.3.0</graal-sdk.version>
     <junit.jupiter.version>5.9.1</junit.jupiter.version>
+    <spring-boot-maven-plugin.version>2.7.5</spring-boot-maven-plugin.version>
     <assertj.version>3.23.1</assertj.version>
     <mockito.version>4.8.1</mockito.version>
     <spotless.version>2.27.2</spotless.version>
@@ -47,12 +47,6 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>${gson.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.graalvm.sdk</groupId>
-      <artifactId>graal-sdk</artifactId>
-      <version>${graal-sdk.version}</version>
     </dependency>
 
     <dependency>
@@ -80,6 +74,7 @@
 
 
   <build>
+    <finalName>${project.artifactId}</finalName>
 
     <plugins>
 
@@ -88,8 +83,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
-          <source>16</source>
-          <target>16</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
 
@@ -99,30 +94,19 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>${maven-assembly-plugin.version}</version>
-        <configuration>
-          <finalName>${project.artifactId}</finalName>
-          <descriptors>
-            <descriptor>src/assembly/jar-for-native-image.xml</descriptor>
-          </descriptors>
-          <appendAssemblyId>false</appendAssemblyId>
-          <archive>
-            <manifest>
-              <mainClass>com.rabbitmq.concourse.GithubReleaseDeleteResource</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot-maven-plugin.version}</version>
         <executions>
           <execution>
-            <id>assemble-all</id>
-            <phase>package</phase>
             <goals>
-              <goal>single</goal>
+              <goal>repackage</goal>
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <mainClass>com.rabbitmq.concourse.GithubReleaseDeleteResource</mainClass>
+        </configuration>
       </plugin>
 
       <plugin>
